@@ -209,8 +209,14 @@ end
 MOVEMENT_KEYS = {
     KEYBOARD_CURSOR_UP = { 0, -1, 0 }, KEYBOARD_CURSOR_DOWN = { 0, 1, 0 },
     KEYBOARD_CURSOR_LEFT = { -1, 0, 0 }, KEYBOARD_CURSOR_RIGHT = { 1, 0, 0 },
+    KEYBOARD_CURSOR_UPLEFT = {-1, -1, 0}, KEYBOARD_CURSOR_UPRIGHT = {1, -1, 0},
+    KEYBOARD_CURSOR_DOWNLEFT = {-1, 1, 0}, KEYBOARD_CURSOR_DOWNRIGHT = {1, 1, 0},
     KEYBOARD_CURSOR_UP_FAST = { 0, -1, 0, true }, KEYBOARD_CURSOR_DOWN_FAST = { 0, 1, 0, true },
     KEYBOARD_CURSOR_LEFT_FAST = { -1, 0, 0, true }, KEYBOARD_CURSOR_RIGHT_FAST = { 1, 0, 0, true },
+    KEYBOARD_CURSOR_UPLEFT_FAST = {-1, -1, 0, true}, KEYBOARD_CURSOR_UPRIGHT_FAST = {1, -1, 0, true},
+    KEYBOARD_CURSOR_DOWNLEFT_FAST = {-1, 1, 0, true}, KEYBOARD_CURSOR_DOWNRIGHT_FAST = {1, 1, 0, true},
+    KEYBOARD_CURSOR_UP_Z = {0, 0, 1}, KEYBOARD_CURSOR_DOWN_Z = {0, 0, -1},
+    KEYBOARD_CURSOR_UP_Z_AUX = {0, 0, 1}, KEYBOARD_CURSOR_DOWN_Z_AUX = {0, 0, -1},
     CURSOR_UP = { 0, -1, 0 }, CURSOR_DOWN = { 0, 1, 0 },
     CURSOR_LEFT = { -1, 0, 0 }, CURSOR_RIGHT = { 1, 0, 0 },
     CURSOR_UPLEFT = { -1, -1, 0 }, CURSOR_UPRIGHT = { 1, -1, 0 },
